Fixed spacing issue on the courses page.

--- a/source/stylesheets/global.css.sass
+++ b/source/stylesheets/global.css.sass
@@ -421,7 +421,8 @@ h1,h2,h3,h4
 			height: 0.75em
 	.courses
 		padding:
-			top: 0.45em
+			top: 0.225em
+			bottom: 0.45em
 
 #filters
 	display: block
